forcedotcom/src/objects/ProcessStep__c.object
<CustomObject>
    <fields>
        <fullName>HTTPBodyFrom__c</fullName>
        <label>HTTP Body From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPBody__c</fullName>
        <defaultValue>&quot;eBayCompleteSaleRequest__c&quot;</defaultValue>
        <label>HTTP Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTPEndpointFrom__c</fullName>
        <label>HTTP Endpoint From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPEndpoint__c</fullName>
        <defaultValue>&quot;https://api.sandbox.ebay.com/ws/api.dll&quot;</defaultValue>
        <label>HTTP Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTPHeaderFrom__c</fullName>
        <label>HTTP Header From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPHeader__c</fullName>
        <defaultValue>&quot;X-EBAY-API-COMPATIBILITY-LEVEL:781&quot; + BR() + 
&quot;X-EBAY-API-DEV-NAME:bb96e7db-0da6-4968-b921-4ca00c341ad1&quot; + BR() + 
&quot;X-EBAY-API-APP-NAME:AndrewFa-9e4b-4001-a4a9-e569eb8c074c&quot; + BR() + 
&quot;X-EBAY-API-CERT-NAME:ca05b0e4-8f53-4a58-98a5-73db28509dd9&quot; + BR() + 
&quot;X-EBAY-API-SITEID:0&quot; + BR() +  
&quot;X-EBAY-API-CALL-NAME:CompleteSale&quot;</defaultValue>
        <label>HTTP Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTPMethodFrom__c</fullName>
        <label>HTTP Method From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPMethod__c</fullName>
        <defaultValue>&quot;POST&quot;</defaultValue>
        <label>HTTP Method</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>MessageSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Process Step</label>
    <nameField>
        <label>Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>